// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography renders paragraph 1`] = `
<div>
  <p
    class=""
  >
    Paragraph
  </p>
</div>
`;

exports[`Typography renders text 1`] = `
<div>
  <span
    class=""
  >
    Text
  </span>
</div>
`;
